<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BNZLS.Lawyer</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_main_title">BNZLS - Find the right lawyer!</string>
    
    <string name="tab_label_settings">My</string>
    <string name ="tab_label_service">Service</string>
    <string name="tab_label_cases">Cases</string>
    <string name="tab_label_rating">Rating</string>
    <string name="tab_label_home">Home</string>
    <string name="my_statistic">Information Statistic</string>
    <string name="chart">Ranking Chart</string>
    <string name="label_my_comments">My Comments</string>
    <string name="my_account">My Account</string>
    <string name="my_account_setting">Account Options</string>
    <string name="my_ranking">My Ranking</string>
    <string name="my_setting">Setting</string>
    <string name="preference">Setting</string>
    <string name="enable_privacy">Enable Secret Code</string>
    <string name="label_question">Question</string>
    <string name="label_request">Request</string>
    <string name="register_progress_signing_in">Registering&#8230;</string>
    <string name="prompt_email_account">Please input email address as account</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="accept">I accept Rainbow</string>
    <string name="terms_and_conditions"><u> terms and conditions</u></string>
    <string name="register">Register</string>
    <string name="use_existing_account">Log in by using existing account</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="prompt_email">Email Or Mobile</string>
    <string name="action_sign_in_register">Sign in</string>
    <string name="createaccount">Create Account</string>
    <string name="forget_pass">Forget Password</string>
    
	<string name="label_answer">Answer</string>
	<string name="label_duration">Duration</string>
	<string name="label_ranking">Ranking</string>
	<string name="label_style">style</string>
	<string name="label_attitude">Attitude</string>
	<string name="label_comments">Comments</string>
	<string name="label_reply">Reply</string>
	<string name="label_commit">Commit</string>
	<string name="btn_reply">Reply</string>
	
	<string name ="btn_change_pic">Change photo</string>
	<string name = "btn_back">Back</string>
	<string name="label_login">Login</string>
	<string name="label_loggedin">Logged in</string>
	<string name="btn_promote_txt">Want to be shown on top?\n Only $1 per day!</string>
	<string name="btn_fee_calc_txt">Legal cost calculator</string>
	<string name="court_addr_txt">Court address query</string>
	<string name="btn_more_txt">More…, &#8230;</string>
	<string name="label_case_list">Case List</string>
	<string name="label_comments_lsit">Comment List</string>
	<string name="label_license_num">License Number</string>
	<string name="label_firm">Working firm</string>
	<string name="label_location">Location</string>
	<string name="label_edu">Education background</string>
	<string name="label_certificates">Certificates</string>
	<string name="avatar_from_camera">Get from camera</string>
	<string name="avatar_from_gallery">Get from gallery</string>
    <string name="save_fail">Save failed</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_OK">OK</string>
    <string name="label_category">Categories</string>
    <string name="label_desc">Description</string>
    <string name="label_gellary">Gellary</string>
    <string name="label_daily_quota">Daily Quota</string>
    <string name="label_response_time">Response Time Limit</string>
    <string name="label_voice">Voice Recognition</string>
    <string name="btn_logoff">Log off</string>
    
</resources>
