<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/buttom_tab"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:background="@drawable/tab_bar_bg"
    android:layout_gravity="bottom"
    android:paddingTop="5dp"
    >
    
<TextView android:id="@+id/tab_home" 
        android:layout_width="0dp"
    	
    	android:layout_height="wrap_content"
    	android:drawableTop="@drawable/tab_home_style"
    	android:layout_weight="1"
    	android:text="@string/tab_label_home"
    	android:gravity="center_horizontal"
    	android:textAppearance="@style/TabLabelApperance"/>
    <TextView android:id="@+id/tab_rating" 
        android:layout_width="0dp"
    	android:layout_height="wrap_content"
    	android:drawableTop="@drawable/tab_rating_style"
    	android:layout_weight="1"
    	android:text="@string/tab_label_rating"
    	android:gravity="center_horizontal"
    	android:visibility="gone"
    	android:textAppearance="@style/TabLabelApperance"/>
    <TextView android:id="@+id/tab_service" 
        android:layout_width="0dp"
    	android:layout_height="wrap_content"
    	android:drawableTop="@drawable/tab_service_style"
    	android:layout_weight="1"
    	android:text="@string/tab_label_cases"
    	android:gravity="center_horizontal"
    	android:textAppearance="@style/TabLabelApperance"/>
    <TextView android:id="@+id/tab_settings" 
        android:layout_width="0dp"
    	android:layout_height="wrap_content"
    	android:drawableTop="@drawable/tab_settings_style"
    	android:layout_weight="1"
    	android:text="@string/tab_label_settings"
    	android:gravity="center_horizontal"
    	android:textAppearance="@style/TabLabelApperance"/>    

</LinearLayout>
