<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include
        layout="@layout/main_title_bar" />

    <FrameLayout 
        android:id="@+id/slideview"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="2"
        />
    
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="3">
        
        <Button 
            android:id="@+id/btn_promote"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_promote_txt"/>
        <Button 
            android:id="@+id/btn_news"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:text="News \n news1\n news2\n news3\n news4\n ......"/>
        
    </LinearLayout>
    
    <LinearLayout 
         android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="2"
        >
        
        <Button 
            android:id="@+id/btn_fee_calc"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:text="@string/btn_fee_calc_txt"/>
        <Button 
            android:id="@+id/btn_court_addr"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:text="@string/court_addr_txt"/>
        <Button 
            android:id="@+id/btn_more"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:text="@string/btn_more_txt"/>
        
    </LinearLayout>

</LinearLayout>
