<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/navigation_bar"/>
    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <TextView
                style="@style/contactValueTextStyle"
                android:layout_marginTop="5dip"
                android:text="@string/label_category"
                android:textColor="#999999"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtCate"
                style="@style/contactValueTextStyle"
                android:layout_marginTop="-15dip"
                android:text="Category A, Category B" />

            <View style="@style/contactItemDividerStyle" />
            
            <TextView
                style="@style/contactValueTextStyle"
                android:layout_marginTop="5dip"
                android:text="@string/label_desc"
                android:textColor="#999999"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtDesc"
                style="@style/contactValueTextStyle"
                android:layout_marginTop="-15dip" />

            <View style="@style/contactItemDividerStyle" />

            
            <TextView
                style="@style/contactValueTextStyle"
                android:layout_marginTop="5dip"
                android:text="@string/label_gellary"
                android:textColor="#999999"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtGellary"
                style="@style/contactValueTextStyle"
                android:layout_marginTop="-15dip" 
                android:text="Click to enter gellary"/>

            <View style="@style/contactItemDividerStyle" />

            <TextView
                style="@style/contactValueTextStyle"
                android:layout_marginTop="5dip"
                android:text="@string/label_daily_quota"
                android:textColor="#999999"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtQuota"
                style="@style/contactValueTextStyle"
                android:layout_marginTop="-15dip"
                android:text="3 Per Day" />

            <View style="@style/contactItemDividerStyle" />

            <TextView
                style="@style/contactValueTextStyle"
                android:layout_marginTop="5dip"
                android:text="@string/label_response_time"
                android:textColor="#999999"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtResponseTime"
                style="@style/contactValueTextStyle"
                android:layout_marginTop="-15dip"
                android:text="24 Hours" />
            
            <View style="@style/contactItemDividerStyle" />

            <TextView
                style="@style/contactValueTextStyle"
                android:layout_marginTop="5dip"
                android:text="@string/label_voice"
                android:textColor="#999999"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtVoice"
                style="@style/contactValueTextStyle"
                android:layout_marginTop="-15dip"
                android:text="Click to edit" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
