<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
   <TextView 
       android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/group_padding"
         android:layout_marginLeft="@dimen/group_padding"
         android:textSize="18sp"
         android:text="@string/label_reply"
         />
         
	<EditText
	    android:id="@+id/edit_content"
	    android:layout_marginLeft="@dimen/group_padding"
	    android:layout_marginRight="@dimen/group_padding"
	    android:layout_width="match_parent"
	    android:layout_height="64dp"
	    android:textSize="18sp"
	    android:background="@drawable/custom_border"
	   
	    
	    />
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <Button 
	    android:id="@+id/btnOK"
	    android:layout_width="match_parent"
	    android:layout_weight="1"
	    android:layout_height="@dimen/log_in_button_height"
	    android:background="@drawable/btn_plain_green_style"
	    android:text="@string/btn_OK"
	    android:layout_marginLeft="@dimen/group_padding"
	    android:layout_marginRight="@dimen/group_padding"
	    android:layout_marginTop="@dimen/group_padding"
	    />
	    <Button 
	    android:id="@+id/btnCancel"
	    android:layout_weight="1"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/log_in_button_height"
	    android:background="@drawable/btn_plain_green_style"
	    android:text="@string/btn_cancel"
	    android:layout_marginLeft="@dimen/group_padding"
	    android:layout_marginRight="@dimen/group_padding"
	    android:layout_marginTop="@dimen/group_padding"
	    />
	</LinearLayout>

</LinearLayout>
